--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.11.20",
         "multer": "^1.4.2",
-        "nodemailer": "^6.5.0"
+        "nodemailer": "^6.5.0",
+        "dotenv": "^8.2.0"
     },
     "devDependencies": {
         "dotenv": "^8.2.0",
